Cleaning up the roll-up code and fixing the behavior for rolled-up items that are outside the 24hr window